# codeinventory

./: .gitignore  LICENSE  README.md  codeinventory_run.py  comprehensive_api.py  comprehensive_scanner.py  comprehensive_scanner.py.bak1  correct_schema.txt  debug_scan.py  enhanced_scanner.py  explore_db.py  fix_database_schema.py  fix_schema.py  fixed_api.py  fixed_api_server.py  improved_design.md  main.py  make-readme.sh  pyproject.toml  run_api.py  run_api_custom_port.py  run_tests.py  test_api.py  update_schema.py  update_schema_execution.py  view_database.py
__code_docs__/: README_analysis.json  README_analysis.md  codeinventory_run_analysis.json  codeinventory_run_analysis.md  comprehensive_scanner_analysis.json  comprehensive_scanner_analysis.md  debug_scan_analysis.json  debug_scan_analysis.md  enhanced_scanner_analysis.json  enhanced_scanner_analysis.md  explore_db_analysis.json  explore_db_analysis.md  fix_database_schema_analysis.json  fix_database_schema_analysis.md  fix_schema_analysis.json  fix_schema_analysis.md  fixed_api_analysis.json  fixed_api_analysis.md  fixed_api_server_analysis.json  fixed_api_server_analysis.md  main_analysis.json  main_analysis.md  make-readme_analysis.json  make-readme_analysis.md  run_api_analysis.json  run_api_analysis.md  run_api_custom_port_analysis.json  run_api_custom_port_analysis.md  targeted_scan_analysis.json  targeted_scan_analysis.md  test_api_analysis.json  test_api_analysis.md  update_schema_analysis.json  update_schema_analysis.md  update_schema_execution_analysis.json  update_schema_execution_analysis.md  (+2 more)
(+76 files in other folders)
